--- a/index.html
+++ b/index.html
@@ -4,9 +4,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid</title>
+    <link rel="stylesheet" href="asserts/css/style.css">
 </head>
 <body>
-    <!--website using grid layout  -->
+    <!-- web page using Grid layout -->
+    <div class="grid-container">
+        <div class="grid-item">
+            <ul>
+                <li><a href="#">The books</a></li>
+                <li><a href="#">Author</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Shop</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">Podcast</a></li>
+            </ul>
+        </div>
+        <div class="grid-item">
+            <img src="asserts/img/img1.png" alt="photos">
+        </div>
+        <div class="grid-item">
+            <h3>Upcoming Podcasts</h3>
+            <h2>Deborah Bibby</h2>
+        </div>  
+        <div class="grid-item">
+            <h3>The book</h3>
+            <img src="asserts/img/img3.png" alt="photos">
+        </div>
+        <div class="grid-item">
+            <img src="asserts/img/IMG3 (1).png" alt="photos">
+        </div>
+        <div class="grid-item">
+            <h3>Synopsis</h3>
+            <h2>Applying design 
+                principles to your
+                life.
+            </h2>
+        </div>  
+        <div class="grid-item">
+            <h3>Author</h3>
+            <h2>Vince Frost*</h2>
+        </div>
+        <div class="grid-item">
+            <img src="asserts/img/imgicons.png" alt="photos">
+        </div>
+        <div class="grid-item">
+            <h3>Shop</h3>
+        </div>
+        <div class="grid-item">
+            <h3>Designing Wellbeing with Kerry Hill Architects.</h3>
+        </div>
+        <div class="grid-item">
+            <h2>View the latest events</h2>
+        </div>
+        <div class="grid-item">12</div>
+        <div class="grid-item">13</div>
+    </div>
 </body>
 </html>
