--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <img src="asserts/img/img3.png" alt="photos">
         </div>
         <div class="grid-item">
-            <img src="asserts/img/IMG3 (1).png" alt="photos">
+            <img src="asserts/img/kerry.png" alt="photos">
         </div>
         <div class="grid-item">
             <h3>Synopsis</h3>
