--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- web page using Grid layout -->
     <div class="grid-container">
-        <div class="grid-item">
+        <div class="grid-item-1" style="background-color: white;">
             <ul>
                 <li><a href="#">The books</a></li>
                 <li><a href="#">Author</a></li>
@@ -21,45 +21,45 @@
                 <li><a href="#">Podcast</a></li>
             </ul>
         </div>
-        <div class="grid-item">
+        <div class="grid-item" style="background-color: white;">
             <img src="asserts/img/img1.png" alt="photos">
         </div>
         <div class="grid-item">
-            <h3>Upcoming Podcasts</h3>
+            <h3><a href="#upcoming">Upcoming Podcasts</a></h3>
             <h2>Deborah Bibby</h2>
         </div>  
-        <div class="grid-item">
-            <h3>The book</h3>
-            <img src="asserts/img/img3.png" alt="photos">
+        <div class="books">
+            <div>
+                <h3><a href="#books">The book</a></h3><br>
+                <img src="asserts/img/img3.png" alt="photos">
+            </div>
         </div>
-        <div class="grid-item">
-            <img src="asserts/img/kerry.png" alt="photos">
+        <div class="kerry">
+            <img src="asserts/img/kerry.PNG" alt="photos">
         </div>
-        <div class="grid-item">
-            <h3>Synopsis</h3>
-            <h2>Applying design 
-                principles to your
+        <div class="syn">
+            <h3><a href="#synopsis">Synopsis</a></h3>
+            <h2>Applying design <br>
+                principles to your <br>
                 life.
             </h2>
         </div>  
         <div class="grid-item">
-            <h3>Author</h3>
+            <h3><a href="#author">Author</a></h3>
             <h2>Vince Frost*</h2>
         </div>
-        <div class="grid-item">
+        <div class="icons" style="background-color: white;">
             <img src="asserts/img/imgicons.png" alt="photos">
         </div>
-        <div class="grid-item">
-            <h3>Shop</h3>
+        <div class="shop">
+            <h2>Shop</h2>
         </div>
-        <div class="grid-item">
+        <div class="item8">
             <h3>Designing Wellbeing with Kerry Hill Architects.</h3>
         </div>
-        <div class="grid-item">
+        <div class="item9">
             <h2>View the latest events</h2>
         </div>
-        <div class="grid-item">12</div>
-        <div class="grid-item">13</div>
     </div>
 </body>
 </html>
